# rubbish

./: .gitignore  README.md  main.py  optimizer.pt  pyproject.toml
rust/: Cargo.toml
rust/src/: data.rs  device.rs  generate.rs  main.rs  model.rs  tokenizer.rs  train.rs
src/rubbish/: __init__.py
src/rubbish/data/: __init__.py
src/rubbish/model/: __init__.py
src/rubbish/tokenizer/: __init__.py
src/rubbish/train/: __init__.py
tests/: test_data.py  test_tokenizer.py
